--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "F:\\python\\python.exe"
+    "python.pythonPath": "C:\\Users\\kuba1\\AppData\\Local\\Programs\\Python\\Python37\\python.exe"
 }
